# startlaunch

./: .gitignore  AGENTS.md  DEVELOPMENT_LOG.md  INTEGRATION_REPORT.md  PRD.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: README.md
memory_bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  DATABASE.md  ENVIRONMENT_MANAGER.md  LOGGING.md  PROCESS_CONTROLLER.md  PROJECT_MANAGER.md  SECURITY_SCANNER.md  SETUP_COMPLETE.md  SNAPSHOT_SYSTEM.md  URL_PARSER.md  WEB_INTERFACE.md  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  database_property_test.rs  environment_manager.rs  environment_manager_property_test.rs  environment_manager_test.rs  error.rs  lib.rs  main.rs  models.rs  process_controller.rs  process_controller_port_property_test.rs  process_controller_property_test.rs  process_controller_test.rs  project_analyzer.rs  project_analyzer_property_test.rs  project_manager_property_test.rs  project_manager_test.rs  security_scanner.rs  security_scanner_property_test.rs  security_scanner_test.rs  settings_manager.rs  settings_manager_property_test.rs  settings_manager_test.rs  snapshot_manager.rs  snapshot_manager_property_test.rs  snapshot_manager_test.rs  ui_property_test.rs  url_parser.rs  url_parser_property_test.rs  url_parser_test.rs
src-tauri/tests/: integration_test.rs
src/components/: IMPLEMENTATION_SUMMARY.md  ProcessWindow.css  ProcessWindow.tsx  (+5 more)
test_project/: README.md  index.js  package.json
(+3 files in other folders)
