[package]
name = "autolaunch"
version = "0.1.0"
description = "AutoLaunch - автоматический запуск GitHub проектов"
authors = ["AutoLaunch Team"]
license = "MIT"
repository = "https://github.com/autolaunch/autolaunch"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-remove-file", "fs-read-dir", "fs-exists", "shell-open", "path-all", "fs-create-dir", "fs-write-file", "fs-remove-dir", "dialog-save", "fs-read-file", "process-relaunch", "process-exit", "dialog-open", "fs-copy-file", "fs-rename-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.0"
url = "2.0"
reqwest = { version = "0.11", features = ["json"] }
git2 = "0.18"
docker-api = "0.14"
dirs = "5.0"
lazy_static = "1.4"

[dev-dependencies]
proptest = "1.0"
tempfile = "3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
